working prototype completed

--- a/main.html
+++ b/main.html
@@ -4,6 +4,12 @@
   <link rel="stylesheet" type="text/css" href="styling.css">
 </head>
 <body>
+  <form id="countdownForm">
+    <label for="datetime">Enter Date and Time:</label>
+    <input type="datetime-local" id="datetime" required>
+    <button type="button" id="setCountdown">Set Countdown</button>
+  </form>
+
   <div id="countdown"></div>
   <script src="script.js"></script>
 </body>
