--- a/main.html
+++ b/main.html
@@ -7,7 +7,13 @@
   <form id="countdownForm">
     <label for="datetime">Enter Date and Time:</label>
     <input type="datetime-local" id="datetime" required>
+    
+    <!-- Added input field for label -->
+    <label for="label">Label:</label>
+    <input type="text" id="label">
+    
     <button type="button" id="setCountdown">Set Countdown</button>
+    <button type="button" id="removeCountdown">Remove Countdown</button>
   </form>
 
   <div id="countdown"></div>
