added some new features

--- a/main.html
+++ b/main.html
@@ -4,10 +4,11 @@
 <link rel="stylesheet" type="text/css" href="popupStyling.css">
 </head>
 <body>
+    <img src="logoBannerLarge.png" width="200px" height="50px" class="logoClass">
     <h1>Important Dates:</h1>
   <form id="countdownForm">
     <label for="datetime">Enter Date and Time:</label>
-    <input type="datetime-local" id="datetime" required>
+    <input type="datetime-local" id="datetime" required class="datePicker">
     
     <!-- Added input field for label -->
     <label for="label">Label:</label>
