--- a/about.html
+++ b/about.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="about.css">
+    <link rel="stylesheet" type="text/css" href="popupStyling.css">
 </head>
 <body>
-
+    <img src="logoBannerLarge.png" width="200px" height="50px" class="logoClass">
+    <h1>About Antilapse</h1>
+    <nav class="nav">
+        <a href="main.html">Home</a>
+        <a href="about.html">About</a>
+        <span class="nav-indicator"></span>
+    </nav>
 </body>
 </html>
