made a cool menu selector

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <nav class="nav">
         <a href="main.html">Home</a>
         <a href="about.html">About</a>
-        <span class="nav-indicator"></span>
+        <div class="effect about"></div>
     </nav>
 </body>
 </html>
