--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
   <nav class="nav">
     <a href="main.html">Home</a>
     <a href="about.html">About</a>
-    <span class="nav-indicator"></span>
-</nav>
+    <div class="effect home"></div>
+  </nav>
 
   <form id="countdownForm">
     <label for="datetime">Enter Date and Time:</label>
