--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
     <button type="button" id="removeCountdown" class="mainButton">Remove Countdown</button>
   </form>
 
-
+  <div id="quote"></div>
 
   <div id="countdown"></div>
   <script src="script.js"></script>
