fixed fonts and added about page

--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="popupStyling.css">
+    <link href="https://fonts.googleapis.com/css?family=" rel="stylesheet">
 </head>
 <body>
     <img src="logoBannerLarge.png" width="200px" height="50px" class="logoClass">
@@ -11,5 +12,29 @@
         <a href="about.html">About</a>
         <div class="effect about"></div>
     </nav>
+<h3>
+    How to use Antilapse:
+</h3>
+<p>
+    <strong>To add an event: </strong>Enter a date and time using the menu, and press "Set Coundown". The list will automatically sort 
+    based on the nearest date. 
+    <br>
+    <strong>To delete an event: </strong>Enter the label of the event you wish to get rid of, and press "Remove Countdown". 
+    <br><br>
+    Antilapse will send you notifications whenever your countdowns reach 1 day, and then 1 hour. Text will change color based on urgency.
+    <br>
+    It will also generate a quote each time you open the window to remind you that time is relentless, and only you have the power to act before it arrives. 
+</p>
+<h3>
+    Development:
+</h3>
+<p>
+    Antilapse serves as my first ever project, and is one of my first steps in 
+    the important process of building my resume. 
+    <br><br>
+    Regarding the roadmap; this project is mostly complete. I may experiment with adding the D2L API to automate adding dates for students, 
+    or creating a small settings tab as well. 
+</p>
+<a href="https://github.com/SenorYuen" target="_blank" rel="noopener noreferrer">Adam Yuen</a> 
 </body>
 </html>
