did font fix on main too

--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="popupStyling.css">
+<link href="https://fonts.googleapis.com/css?family=" rel="stylesheet">
 </head>
 <body>
   <img src="logoBannerLarge.png" width="200px" height="50px" class="logoClass">
